compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_char_seq_escapes-47.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := '^"

---
database:
stmt:
Idx::<Stmt>(0) (0..7): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, 2..4), rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..2): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..7): Literal(CharSeq(""))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1
error at 6..7: invalid char literal: unknown caret escape
error at 5..7: invalid char literal: missing terminator character

